--- a/public/locales/it-IT/common.json
+++ b/public/locales/it-IT/common.json
@@ -1,4 +1,17 @@
 {
     "confim":"Conferma",
-    "username":"Username o Email"
+    "select":"Seleziona",
+    "continue":"Prosegui",
+    "route_home":"Home",
+    "route_tournament":"Selezione Torneo",
+    "route_stage1":"Fase 1",
+    "route_stage2":"Fase 2",
+    "route_user":"Gestione Utente",
+    "route_player":"Gestione Giocatori",
+    "route_login":"Login",
+    "route_notFound":"Non trovato",
+    "logout":"Logut",
+    "en-US":"English",
+    "it-IT":"Italiano"
+
 }
