--- a/public/locales/en-US/player.json
+++ b/public/locales/en-US/player.json
@@ -1,5 +1,20 @@
 {
-
+    "data":"No data found",
+    "add":"Add player",
+    "filter":"Clear filters",
+    "field": {
+        "name":"Name",
+        "surname":"Surname",
+        "alias":"Alias",
+        "role":"Role",
+        "email":"Email",
+        "phone":"Mobile",
+        "filter":"Filter"
+    },
+    "delete":{
+        "one":"Delete player",
+        "multi":"Delete players"
+    },
     "role":{
         "role":"Role",
         "none":"I'm not a player",
