Fix tournament creation

--- a/public/locales/it-IT/tournament.json
+++ b/public/locales/it-IT/tournament.json
@@ -10,6 +10,7 @@
     "visibility":"Visibilità",
     "error":{
         "none":"Nessun torneo presente. Riprova piu tardi o contatta un amminstratore.",
-        "name":"Inserire un nome per il torneo"
+        "name":"Inserire un nome per il torneo",
+        "duplicate":"Il torneo {{name}} è gia presente"
     }
 }
