--- a/public/locales/en-US/common.json
+++ b/public/locales/en-US/common.json
@@ -3,7 +3,9 @@
     "select":"Select",
     "continue":"Continue",
     "cancel":"Cancel",
+    "exec":"Exec",
     "save":"Save",
+    "max":"Max",
     "saving":"Saving",
     "reset":"Reset",
     "close":"Close",
