--- a/public/locales/it-IT/common.json
+++ b/public/locales/it-IT/common.json
@@ -3,7 +3,9 @@
     "select":"Seleziona",
     "continue":"Prosegui",
     "cancel":"Annulla",
+    "exec":"Esegui",
     "save":"Salva",
+    "max":"Max",
     "saving":"Salvataggio in corso",
     "reset":"Reset",
     "close":"Chiudi",
