--- a/public/locales/it-IT/tournament.json
+++ b/public/locales/it-IT/tournament.json
@@ -8,6 +8,7 @@
     "public":"Pubblico",
     "private":"Privato",
     "visibility":"Visibilità",
+    "test":"test",
     "progress":{
         "new":"Nuovo",
         "pairsSelection":"Selezione Coppie",
