Add swagger UI ( basic, it sucks )

--- a/public/locales/en-US/common.json
+++ b/public/locales/en-US/common.json
@@ -19,6 +19,7 @@
         "user":"User Managment",
         "player":"Player Managment",
         "login":"Login",
+        "swagger":"Swagger",
         "notFound":"Not found"
     },
     "lang":{
