New Player page

--- a/public/locales/en-US/player.json
+++ b/public/locales/en-US/player.json
@@ -1,6 +1,7 @@
 {
     "data":"No data found",
     "add":"Add player",
+    "edit":"Edit player",
     "filter":"Clear filters",
     "field": {
         "name":"Name",
