--- a/public/locales/it-IT/auth.json
+++ b/public/locales/it-IT/auth.json
@@ -10,6 +10,9 @@
     "delete":"Elimina utente",
     "manage":"Gestione dati utente",
     "login":"Login",
+    "logout":"Alla prossima...",
+    "expired_alert":"La tua sessione è scaduta. Stai per essere reindirizzato alla login...",
+    "expired":"La tua sessione è scaduta...",
     "email":{
         "email":"Email",
         "confirm":"Conferma email"
@@ -41,6 +44,10 @@
             "validation":"La password inserita non rispetta i criteri richiesti",
             "match":"Le password non corrispondono"
         }
-
-    }
+    },
+		"server": {
+			"error": {
+				"wrong_credential": "Credenziali errate",
+			}
+		}
 }
