--- a/public/locales/it-IT/common.json
+++ b/public/locales/it-IT/common.json
@@ -30,5 +30,8 @@
     },
     "error":{
         "generic":"Errore, riprovare piu tardi..."
-    }
+    },
+		"server": {
+			"unexpected": "Errore server non previsto!..",
+		}
 }
