--- a/public/locales/it-IT/auth.json
+++ b/public/locales/it-IT/auth.json
@@ -9,6 +9,7 @@
     "register":"Registrati",
     "delete":"Elimina utente",
     "manage":"Gestione dati utente",
+    "welcome":"Benvenuto {{username}}",
     "login":"Login",
     "logout":"Alla prossima...",
     "expired_alert":"La tua sessione è scaduta. Stai per essere reindirizzato alla login...",
@@ -29,6 +30,7 @@
         }
     },
     "error":{
+        "generic":"Correggi gli errori per procedere con la registrazione",
         "username":"Il campo username è obbligatorio",
         "name":"Il campo nome è obbligatorio",
         "surname":"Il campo cognome è obbligatorio",
@@ -45,9 +47,11 @@
             "match":"Le password non corrispondono"
         }
     },
-		"server": {
-			"error": {
-				"wrong_credential": "Credenziali errate",
-			}
-		}
+    "server": {
+        "deleted":"Utente {{username}} eliminato",
+        "error": {
+            "wrong_credential": "Credenziali errate",
+            "already_exists":"Email o Username gia utilizzati."
+        }
+    }
 }
