--- a/public/locales/en-US/common.json
+++ b/public/locales/en-US/common.json
@@ -15,7 +15,8 @@
     "loading":"Loading",
     "notification":{
         "new_tournament":"Tournament {{tournament}} is now available",
-        "stage1_delete":"This tournament stage has been deleted from an administrator."
+        "stage1_delete":"This tournament stage has been deleted from an administrator.",
+        "stage2_delete":"This tournament stage has been deleted from an administrator."
     },
     "route":{
         "home":"Home",
