--- a/public/locales/it-IT/common.json
+++ b/public/locales/it-IT/common.json
@@ -15,7 +15,8 @@
     "loading":"Caricamento",
     "notification":{
         "new_tournament":"Il torneo {{tournament}} è ora disponibile",
-        "stage1_delete":"Questa fase del torneo è stata eliminata da parte di un amminstratore."
+        "stage1_delete":"Questa fase del torneo è stata eliminata da parte di un amminstratore.",
+        "stage2_delete":"Questa fase del torneo è stata eliminata da parte di un amminstratore."
     },
     "route":{
         "home":"Home",
