--- a/public/locales/it-IT/common.json
+++ b/public/locales/it-IT/common.json
@@ -16,7 +16,8 @@
     "notification":{
         "new_tournament":"Il torneo {{tournament}} è ora disponibile",
         "stage1_delete":"Questa fase del torneo è stata eliminata da parte di un amminstratore.",
-        "stage2_delete":"Questa fase del torneo è stata eliminata da parte di un amminstratore."
+        "stage2_delete":"Questa fase del torneo è stata eliminata da parte di un amminstratore.",
+        "updating":"Aggiornamento..."
     },
     "route":{
         "home":"Home",
