--- a/public/locales/en-US/common.json
+++ b/public/locales/en-US/common.json
@@ -1,46 +1,47 @@
 {
-    "confirm":"Confirm",
-    "select":"Select",
-    "continue":"Continue",
-    "cancel":"Cancel",
-    "exec":"Exec",
-    "save":"Save",
-    "edit":"Edit",
-    "delete":"Delete",
-    "max":"Max",
-    "saving":"Saving",
-    "reset":"Reset",
-    "close":"Close",
-    "logout":"Logut",
-    "loading":"Loading",
-    "notification":{
-        "new_tournament":"Tournament {{tournament}} is now available",
-        "stage1_delete":"This tournament stage has been deleted from an administrator.",
-        "stage2_delete":"This tournament stage has been deleted from an administrator."
+    "confirm": "Confirm",
+    "select": "Select",
+    "continue": "Continue",
+    "cancel": "Cancel",
+    "exec": "Exec",
+    "save": "Save",
+    "edit": "Edit",
+    "delete": "Delete",
+    "max": "Max",
+    "saving": "Saving",
+    "reset": "Reset",
+    "close": "Close",
+    "logout": "Logut",
+    "loading": "Loading",
+    "notification": {
+        "new_tournament": "Tournament {{tournament}} is now available",
+        "stage1_delete": "This tournament stage has been deleted from an administrator.",
+        "stage2_delete": "This tournament stage has been deleted from an administrator.",
+        "updating": "Updating..."
     },
-    "route":{
-        "home":"Home",
-        "tournament":"Tournament Selection",
-        "stage1":"Stage 1",
-        "stage2":"Stage 2",
-        "user":"User Managment",
-        "player":"Player Managment",
-        "login":"Login",
-        "swagger":"Swagger",
-        "notFound":"Not found"
+    "route": {
+        "home": "Home",
+        "tournament": "Tournament Selection",
+        "stage1": "Stage 1",
+        "stage2": "Stage 2",
+        "user": "User Managment",
+        "player": "Player Managment",
+        "login": "Login",
+        "swagger": "Swagger",
+        "notFound": "Not found"
     },
-    "lang":{
-        "en-US":"English",
-        "it-IT":"Italiano"
+    "lang": {
+        "en-US": "English",
+        "it-IT": "Italiano"
     },
-    "error":{
-        "generic":"An error occur.Try again later..."
+    "error": {
+        "generic": "An error occur.Try again later..."
     },
-		"server": {
-			"missing": "Missing parameters",
-			"unexpected": "Unexpected server error!..",
-			"not_found":"Item not found",
-			"unauthorized":"Unauthorized",
-			"updated":"Update complete"
-		}
+    "server": {
+        "missing": "Missing parameters",
+        "unexpected": "Unexpected server error!..",
+        "not_found": "Item not found",
+        "unauthorized": "Unauthorized",
+        "updated": "Update complete"
+    }
 }
