--- a/public/locales/en-US/stage2.json
+++ b/public/locales/en-US/stage2.json
@@ -1,7 +1,10 @@
 {
-	"loaded": "Fase 2 caricata...",
-	"deleted": "Fase 2 eliminata...",
-	"updated_cell":"Cella aggiornata",
-	"count":"Dato reperito",
-	"pairs":"Coppie caricate"
+	"loaded": "Stage 2 loaded...",
+	"deleted": "Stage 2 deleted...",
+	"updated_cell":"Cell updated",
+	"count":"Counted",
+	"pairs":"Pairs loaded",
+	"position_done": "Position updated...",
+	"position_not_done": "Position not updated...",
+	"cell_done":"Cell updated..."
 }
