--- a/public/locales/it-IT/common.json
+++ b/public/locales/it-IT/common.json
@@ -14,7 +14,8 @@
     "logout":"Logut",
     "loading":"Caricamento",
     "notification":{
-        "new_tournament":"Il torneo {{tournament}} è ora disponibile",
+        "tournament_new":"Il torneo {{tournament}} è ora disponibile",
+        "tournament_update":"Il torneo è stato aggiornato alla fase successiva",
         "stage1_delete":"Questa fase del torneo è stata eliminata da parte di un amminstratore.",
         "stage2_delete":"Questa fase del torneo è stata eliminata da parte di un amminstratore.",
         "updating":"Aggiornamento..."
