--- a/public/locales/it-IT/stage2.json
+++ b/public/locales/it-IT/stage2.json
@@ -1,5 +1,10 @@
 {
-	"position_done": "Position updated...",
-	"position_not_done": "Position not updated...",
-	"cell_done":"Cell updated..."
+	"loaded": "Fase 2 caricata...",
+	"deleted": "Fase 2 eliminata...",
+	"updated_cell":"Cella aggiornata",
+	"count":"Dato reperito",
+	"pairs":"Coppie caricate",
+	"position_done": "Posizionamento aggiornato...",
+	"position_not_done": "Posizionamento non aggiornato...",
+	"cell_done":"Cella aggiornata..."
 }
