--- a/public/locales/it-IT/common.json
+++ b/public/locales/it-IT/common.json
@@ -1,48 +1,49 @@
 {
-    "confirm":"Conferma",
-    "select":"Seleziona",
-    "continue":"Prosegui",
-    "cancel":"Annulla",
-    "exec":"Esegui",
-    "save":"Salva",
-    "edit":"Modifica",
-    "delete":"Elimina",
-    "max":"Max",
-    "saving":"Salvataggio in corso",
-    "reset":"Reset",
-    "close":"Chiudi",
-    "logout":"Logut",
-    "loading":"Caricamento",
-    "notification":{
-        "tournament_new":"Il torneo {{tournament}} è ora disponibile",
-        "tournament_update":"Il torneo è stato aggiornato alla fase successiva",
-        "stage1_delete":"Questa fase del torneo è stata eliminata da parte di un amminstratore.",
-        "stage2_delete":"Questa fase del torneo è stata eliminata da parte di un amminstratore.",
-        "updating":"Aggiornamento..."
+    "confirm": "Conferma",
+    "select": "Seleziona",
+    "continue": "Prosegui",
+    "cancel": "Annulla",
+    "exec": "Esegui",
+    "save": "Salva",
+    "edit": "Modifica",
+    "delete": "Elimina",
+    "max": "Max",
+    "saving": "Salvataggio in corso",
+    "reset": "Reset",
+    "close": "Chiudi",
+    "logout": "Logut",
+    "loading": "Caricamento",
+    "notification": {
+        "tournament_new": "Il torneo {{tournament}} è ora disponibile",
+        "tournament_update": "Il torneo è stato aggiornato alla fase successiva",
+        "tournament_delete": "Il torneo {{tournament}} non è piu disponibile",
+        "stage1_delete": "Questa fase del torneo è stata eliminata da parte di un amminstratore.",
+        "stage2_delete": "Questa fase del torneo è stata eliminata da parte di un amminstratore.",
+        "updating": "Aggiornamento..."
     },
-    "route":{
-        "home":"Home",
-        "tournament":"Selezione Torneo",
-        "stage1":"Fase 1",
-        "stage2":"Fase 2",
-        "user":"Gestione Utente",
-        "player":"Gestione Giocatori",
-        "login":"Login",
-        "swagger":"Swagger",
-        "notFound":"Non trovato"
+    "route": {
+        "home": "Home",
+        "tournament": "Selezione Torneo",
+        "stage1": "Fase 1",
+        "stage2": "Fase 2",
+        "user": "Gestione Utente",
+        "player": "Gestione Giocatori",
+        "login": "Login",
+        "swagger": "Swagger",
+        "notFound": "Non trovato"
     },
-    "lang":{
-        "en-US":"English",
-        "it-IT":"Italiano"
+    "lang": {
+        "en-US": "English",
+        "it-IT": "Italiano"
     },
-    "error":{
-        "generic":"Errore, riprovare piu tardi..."
+    "error": {
+        "generic": "Errore, riprovare piu tardi..."
     },
     "server": {
         "missing": "Parametri mancanti",
         "unexpected": "Errore server non previsto!..",
-        "not_found":"Oggetto non trovato",
-        "unauthorized":"Non autorizzato",
-        "updated":"Aggiornamento effettuato"
+        "not_found": "Oggetto non trovato",
+        "unauthorized": "Non autorizzato",
+        "updated": "Aggiornamento effettuato"
     }
 }
