--- a/public/locales/it-IT/stats.json
+++ b/public/locales/it-IT/stats.json
@@ -2,6 +2,7 @@
     "loaded": "Statistiche caricate....",
     "error": "Errore caricamento statistiche",
     "partial_pair": "Prima di vedere le statistiche devi completare la coppia.",
+    "new_player": "Nessuna statica da mostrare. Vai a giocare !",
     "stage1": "Fase 1",
     "stage2": "Fase 2",
     "tot": "Totale",
