--- a/public/locales/en-US/stage1.json
+++ b/public/locales/en-US/stage1.json
@@ -1,6 +1,9 @@
 {
+	"loaded": "Stage 1 loaded..",
+	"deleted": "Stage 1 deleted",
+	"error": "Error",
 	"reset": "Reset gironi",
 	"position_done": "Position updated...",
 	"position_not_done": "Position not updated...",
-	"cell_done":"Cell updated..."
+	"cell_done": "Cell updated..."
 }
