--- a/public/locales/it-IT/stage1.json
+++ b/public/locales/it-IT/stage1.json
@@ -1,7 +1,8 @@
 {
-    "reset":"Reset gironi",
-    "position_done":"Posizionamento aggiornato...",
-    "position_not_done":"Posizionamento non aggiornato...",
-    "cell_done":"Cella aggiornata..."
-
+    "loaded": "Girone caricato..",
+    "error": "Errore",
+    "reset": "Reset gironi",
+    "position_done": "Posizionamento aggiornato...",
+    "position_not_done": "Posizionamento non aggiornato...",
+    "cell_done": "Cella aggiornata..."
 }
