--- a/public/locales/en-US/stats.json
+++ b/public/locales/en-US/stats.json
@@ -2,6 +2,10 @@
     "ever": "Ever",
     "week": "Week",
     "month": "Month",
+    "pair": "Pairs",
+    "player": "Players",
+    "win_percentage": "Winnings Percentage",
+    "def_percentage": "Defeats Percentage",
     "best_pairs_ever": "Best Pairs",
     "best_players_ever": "Best Players",
     "best_pairs_week": "Best Pairs of the week",
