--- a/public/locales/it-IT/stats.json
+++ b/public/locales/it-IT/stats.json
@@ -2,6 +2,10 @@
     "ever": "Assoluto",
     "week": "Settimana",
     "month": "Mese",
+    "pair": "Coppie",
+    "player": "Giocatori",
+    "win_percentage": "Percentuale Vittorie",
+    "def_percentage": "Percentuale Sconfitte",
     "best_pairs_ever": "Migliori coppie",
     "best_players_ever": "Migliori giocatori",
     "best_pairs_week": "Migliori coppie della settimana",
