--- a/public/locales/en-US/stats.json
+++ b/public/locales/en-US/stats.json
@@ -1,4 +1,15 @@
 {
+    "ever": "Ever",
+    "week": "Week",
+    "month": "Month",
+    "pair": "Pairs",
+    "player": "Players",
+    "win_percentage": "Winnings Percentage",
+    "def_percentage": "Defeats Percentage",
+    "best_pairs_ever": "Best Pairs",
+    "best_players_ever": "Best Players",
+    "best_pairs_week": "Best Pairs of the week",
+    "best_players_week": "Best Players of the week",
     "loaded": "Stats loaded....",
     "error": "Error loading stats...",
     "partial_pair": "You must assign both players to the pair before you can see the statistics.",
@@ -6,6 +17,7 @@
     "stage1": "Stage 1",
     "stage2": "Stage 2",
     "tot": "Total",
+    "tots": "Totals",
     "not_found": "It looks like it's the first time you play togher! Good Luck! ",
     "winnings1": "Stage 1 Winnings",
     "winnings2": "Stage 2 Winnings",
