--- a/public/locales/it-IT/stats.json
+++ b/public/locales/it-IT/stats.json
@@ -1,4 +1,15 @@
 {
+    "ever": "Assoluto",
+    "week": "Settimana",
+    "month": "Mese",
+    "pair": "Coppie",
+    "player": "Giocatori",
+    "win_percentage": "Percentuale Vittorie",
+    "def_percentage": "Percentuale Sconfitte",
+    "best_pairs_ever": "Migliori coppie",
+    "best_players_ever": "Migliori giocatori",
+    "best_pairs_week": "Migliori coppie della settimana",
+    "best_players_week": "Migliori giocatori della settimana",
     "loaded": "Statistiche caricate....",
     "error": "Errore caricamento statistiche",
     "partial_pair": "Prima di vedere le statistiche devi completare la coppia.",
