--- a/public/locales/en-US/stats.json
+++ b/public/locales/en-US/stats.json
@@ -2,8 +2,8 @@
     "ever": "Ever",
     "week": "Week",
     "month": "Month",
-    "pair": "Pairs",
-    "player": "Players",
+    "pairs": "Pairs",
+    "players": "Players",
     "win_percentage": "Winnings Percentage",
     "def_percentage": "Defeats Percentage",
     "best_pairs_ever": "Best Pairs",
