--- a/public/locales/it-IT/stats.json
+++ b/public/locales/it-IT/stats.json
@@ -2,8 +2,8 @@
     "ever": "Assoluto",
     "week": "Settimana",
     "month": "Mese",
-    "pair": "Coppie",
-    "player": "Giocatori",
+    "pairs": "Coppie",
+    "players": "Giocatori",
     "win_percentage": "Percentuale Vittorie",
     "def_percentage": "Percentuale Sconfitte",
     "best_pairs_ever": "Migliori coppie",
