--- a/public/locales/it-IT/stage1.json
+++ b/public/locales/it-IT/stage1.json
@@ -2,6 +2,7 @@
     "loaded": "Girone caricato..",
     "error": "Errore",
     "reset": "Reset gironi",
+    "deleted": "Fase 1 Eliminata..",
     "position_done": "Posizionamento aggiornato...",
     "position_not_done": "Posizionamento non aggiornato...",
     "cell_done": "Cella aggiornata..."
