--- a/public/locales/en-US/event.json
+++ b/public/locales/en-US/event.json
@@ -4,7 +4,8 @@
         "leaved": "{{user}} just leaved the tournament",
         "new": "Tournament {{tournament}} is now available",
         "deleted": "Tournament {{tournament}} has been deleted.",
-        "updated": "Tournament {{tournament}} moved to next step."
+        "updated_stage1": "{{tournament}} tournament's Stage2 has been deleted.",
+        "updated_stage2": "Tournament {{tournament}} moved to next step."
     },
     "session_expired": "Session expired"
 }
