--- a/public/locales/it-IT/event.json
+++ b/public/locales/it-IT/event.json
@@ -4,7 +4,8 @@
         "leaved": "{{user}} ha lasciato il torneo",
         "new": "E' disponibile il torneo {{tournament}}",
         "deleted": "Il torneo {{tournament}} è stato eliminato da un amminstratore.",
-        "updated": "Il torneo {{tournament}} è stato aggiornato alla fase successiva."
+        "updated_stage1": "La fase 2 del torneo {{tournament}} è stata eliminata.",
+        "updated_stage2": "Il torneo {{tournament}} è stato aggiornato alla fase successiva."
     },
     "session_expired": "Sessione scaduta"
 }
