--- a/public/locales/it-IT/event.json
+++ b/public/locales/it-IT/event.json
@@ -7,5 +7,11 @@
         "updated_stage1": "La fase 2 del torneo {{tournament}} è stata eliminata.",
         "updated_stage2": "Il torneo {{tournament}} è stato aggiornato alla fase successiva."
     },
+    "stage1": {
+        "updated": "Aggiornamento..."
+    },
+    "stage2": {
+        "updated": "Aggiornamento..."
+    },
     "session_expired": "Sessione scaduta"
 }
